5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1602_2895.log
== TEST (2019-03-22 00:12:54) 
-- CODE:
var1 = int(input("Quantos jogos você deseja?"))
var2 = float(input("Qual valor unitário do jogo?"))
var3 = float(input("Qual o valor do frete?"))

total = var1*var2 + var 3

print(total)
-- ERROR:
File "XXXX", line 5
    total = var1*var2 + var 3
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:13:04) 
-- CODE:
var1 = int(input("Quantos jogos você deseja?"))
var2 = float(input("Qual valor unitário do jogo?"))
var3 = float(input("Qual o valor do frete?"))

total = var1*var2 + var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:13:29) 
-- CODE:
var1 = int(input("Quantos jogos você deseja?"))
var2 = float(input("Qual valor unitário do jogo?"))
var3 = float(input("Qual o valor do frete?"))

total = (var1*var2) + var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 00:13:45) 
-- CODE:
var1 = int(input("Quantos jogos voce deseja?"))
var2 = float(input("Qual valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))

total = (var1*var2) + var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 00:14:08) 
-- CODE:
var1 = int(input("Quantos jogos voce deseja?"))
var2 = float(input("Qual valor unitario do jogo?"))
var3 = float(input("Qual o valor do frete?"))

total = (var1*var2) + var3

print(total)
-- EXECUTION TIME:
0.212677
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
